Poop drops properly now!

--- a/Oh Splat/Oh Splat.CSharp.csproj
+++ b/Oh Splat/Oh Splat.CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\CameraFacingBillboard.cs" />
     <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\ObjectStats.cs" />
+    <Compile Include="Assets\Scripts\PoopScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
